@@ -656,7 +656,7 @@ public class WaterCurrents extends ActiveTicker
 		{
 			try
 			{
-				return this.getClass().newInstance();
+				return this.getClass().getDeclaredConstructor().newInstance();
 			}
 			catch (final Exception e)
 			{
