@@ -56,7 +56,7 @@ public class DefaultArrestWarrant implements LegalWarrant
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
