@@ -60,7 +60,7 @@ public class DefaultCharState implements CharState
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
