@@ -124,7 +124,7 @@ public class DefaultClan implements Clan
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
