@@ -71,7 +71,7 @@ public class DefaultJournalEntry implements JournalEntry
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
