@@ -55,7 +55,7 @@ public class DefaultLawSet implements Law
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
