@@ -65,7 +65,7 @@ public class DefaultManufacturer implements Manufacturer
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch(final Exception e)
 		{
