@@ -52,7 +52,7 @@ public class DefaultMessage implements CMMsg
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
