@@ -231,7 +231,7 @@ public class VFShell
 					{
 						try
 						{
-							return getClass().newInstance();
+							return getClass().getDeclaredConstructor().newInstance();
 						}
 						catch (final Exception e)
 						{
