@@ -992,9 +992,17 @@ public class MiniJSON
 							else
 							if(objs[i] instanceof JSONObject)
 							{
-								final Object newObj = cType.newInstance();
-								fromJSONtoPOJO((JSONObject)objs[i], newObj);
-								Array.set(tgt, i, newObj);
+								Object newObj;
+								try
+								{
+									newObj = cType.getDeclaredConstructor().newInstance();
+									fromJSONtoPOJO((JSONObject)objs[i], newObj);
+									Array.set(tgt, i, newObj);
+								}
+								catch (Exception e)
+								{
+									e.printStackTrace();
+								}
 							}
 						}
 						field.set(o, tgt);
@@ -1032,7 +1040,7 @@ public class MiniJSON
 					else
 					if(jo instanceof JSONObject)
 					{
-						final Object newObj = field.getType().newInstance();
+						Object newObj = field.getType().getDeclaredConstructor().newInstance();
 						fromJSONtoPOJO((JSONObject)jo, newObj);
 						field.set(o, newObj);
 					}
@@ -1070,6 +1078,18 @@ public class MiniJSON
 				throw new MJSONException(e.getMessage(),e);
 			}
 			catch (final InstantiationException e)
+			{
+				throw new MJSONException(e.getMessage(),e);
+			}
+			catch (InvocationTargetException e)
+			{
+				throw new MJSONException(e.getMessage(),e);
+			}
+			catch (NoSuchMethodException e)
+			{
+				throw new MJSONException(e.getMessage(),e);
+			}
+			catch (SecurityException e)
 			{
 				throw new MJSONException(e.getMessage(),e);
 			}
